force-app/main/default/objects/Visitors__c/Visitors__c.object-meta.xml
<CustomObject>
    <label>Visitor</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Visitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>