force-app/main/default/objects/Visitors__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <label>ID Number</label>
    <precision>13</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>