force-app/main/default/objects/Visitors__c/fields/ZA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>ZA_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZA Citizen</label>
    <type>Checkbox</type>
</CustomField>